# gitideas

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci-deploy.yml
src/: api.rs  client.rs  entry.rs  git.rs  main.rs  mcp.rs  oauth.rs  search.rs  storage.rs  types.rs
tests/: integration.rs
